Added 3 new tests

--- a/KinectFittingRoom/KinectFittingRoom_UnitTests/KinectFittingRoom_UnitTests.csproj
+++ b/KinectFittingRoom/KinectFittingRoom_UnitTests/KinectFittingRoom_UnitTests.csproj
@@ -37,6 +37,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Kinect, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="WindowsBase" />
@@ -54,6 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="KinectChecking.cs" />
     <Compile Include="PointMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
